flux/apps/cluster1/ollama/ollama-1/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ollama-1
subsets:
- addresses:
  - ip: 192.168.0.195
  ports:
  - port: 11434
    name: ollama-1
