flux/apps/cluster1/ollama/ollama-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-1
spec:
  ports:
  - name: ollama-1
    protocol: TCP
    port: 80
    targetPort: 11434
